--- a/bouncycastlersa/bouncycastlersa.csproj
+++ b/bouncycastlersa/bouncycastlersa.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\dotnetcorecrypto\dotnetcorecrypto.csproj" />
   </ItemGroup>
 
